# hermaeus-mora

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.agents/skills/create-spec/: SKILL.md
.agents/skills/git-commits/: SKILL.md
.agents/skills/pytest-testing/: SKILL.md
.agents/skills/pytest-testing/scripts/: run_pytest.sh
.agents/skills/quality-assurance/: SKILL.md
.agents/skills/quality-assurance/scripts/: cleanup_env.sh  setup_env.sh
.agents/skills/review-branch/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/specs/: 2026-06-19-journal-entry-cli.md  2026-06-20-entry-tags.md  2026-06-21-hm-refine-command.md  2026-06-21-hybrid-search-duckdb.md  2026-06-21-incremental-indexing.md  2026-06-21-qa-issue-resolutions-0-2-1.md  _template.md
src/hermaeus_mora/: __init__.py  cli.py  config.py  models.py  search.py  storage.py
tests/: test_basic.py  test_cli.py  test_config.py  test_models.py  test_search.py  test_storage.py
