[project]
name = "hermaeus-mora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Werner van der Merwe", email = "werner@spatialedge.ai" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
hermaeus-mora = "hermaeus_mora:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "ty>=0.0.40",
]

[tool.ruff]
# Set the maximum line length to 88 (Black's default).
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
