[project]
name = "hermaeus-mora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Werner van der Merwe", email = "werner@spatialedge.ai" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "typer>=0.26.7",
]

[project.scripts]
hm = "hermaeus_mora.cli:app"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "ty>=0.0.40",
]

[tool.pytest.ini_options]
addopts = "--cov=hermaeus_mora --cov-report=term-missing --strict-markers"
testpaths = ["tests"]

[tool.ruff]
# Set the maximum line length to 88 (Black's default).
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
