[project]
name = "hermaeus-mora"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Werner van der Merwe", email = "werner@spatialedge.ai" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "duckdb-engine>=0.17.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.39",
    "typer>=0.26.7",
]

[project.scripts]
hm = "hermaeus_mora.cli:app"

[project.optional-dependencies]
ollama = [
    "ollama>=0.6.2",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.pytest.ini_options]
addopts = "--cov=hermaeus_mora --cov-report=term-missing --strict-markers"
testpaths = ["tests"]

[tool.ruff]
# Set the maximum line length to 88 (Black's default).
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
